--- a/package.json
+++ b/package.json
@@ -17,6 +17,17 @@
     "webpack-dev-server": "^5.2.0"
   },
   "devDependencies": {
-    "webpack-cli": "^6.0.1"
-  }
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.6.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "browserslist": [
+    "> 0.5%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
