--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.23.5",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^9.27.0",
     "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
