--- a/package.json
+++ b/package.json
@@ -11,23 +11,42 @@
     "node": "20"
   },
   "dependencies": {
-    "dayjs": "^1.11.7",
+    "core-js": "^3.42.0",
+    "dayjs": "1.11.7",
     "flatpickr": "4.6.13",
-    "he": "1.2.0",
-    "webpack-dev-server": "^5.2.0"
+    "he": "1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.5",
-    "@babel/preset-env": "^7.23.5",
-    "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^11.0.0",
-    "html-webpack-plugin": "^5.6.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "@babel/core": "7.21.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/preset-env": "7.21.4",
+    "babel-loader": "9.1.2",
+    "copy-webpack-plugin": "11.0.0",
+    "css-loader": "6.7.3",
+    "eslint": "8.38.0",
+    "eslint-config-htmlacademy": "9.0.0",
+    "html-webpack-plugin": "5.5.1",
+    "style-loader": "3.3.2",
+    "webpack": "5.79.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.13.3"
   },
   "browserslist": [
     "> 0.5%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/htmlacademy-univer-js2/2505535-big-trip-5.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/htmlacademy-univer-js2/2505535-big-trip-5/issues"
+  },
+  "homepage": "https://github.com/htmlacademy-univer-js2/2505535-big-trip-5#readme"
 }
